<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/editTextNome"
            android:layout_below="@+id/textViewNome"
            android:text="@string/botao_ok" />

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/editTextNome"
            android:layout_alignBottom="@+id/editTextNome"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonOk"
            android:layout_marginTop="29dp"
            android:layout_toRightOf="@+id/buttonOk" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/imagem" />

        </FrameLayout>

</RelativeLayout>
